--- a/.azure-pipelines/latest.yml
+++ b/.azure-pipelines/latest.yml
@@ -23,11 +23,9 @@ stages:
           - bash: |
              set -ex
              conda --version
+             conda install --yes anaconda-client conda-build
              conda config --set always_yes yes --set changeps1 no
-             conda env create -f scipp-neutron-latest.yaml
             displayName: 'create anaconda environment'
           - bash: |
-             source activate scipp-neutron-latest
-             conda env list
              conda build conda/ -c scipp/label/dev 
             displayName: 'package'
